--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Evlo</string>
     <string name="title_commodity_detail">Commodity Detail</string>
     <string name="price_xml_url">https://data.gov.in/sites/default/files/Date-Wise-Prices-all-Commodity.xml</string>
+    <string name="content_authority">info.santhosh.evlo</string>
 </resources>
