--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_commodity_detail">Commodity Detail</string>
     <string name="price_xml_url">https://data.gov.in/sites/default/files/Date-Wise-Prices-all-Commodity.xml</string>
     <string name="content_authority">info.santhosh.evlo</string>
+    <string name="search_hint">Search Commodities</string>
+    <string name="action_refresh">Refresh data</string>
 </resources>
