--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Evlo</string>
+    <string name="price_unit">Price displayed is per 100 kilograms</string>
     <string name="title_commodity_detail">Commodity Detail</string>
     <string name="price_xml_url">http://data.gov.in/sites/default/files/Date-Wise-Prices-all-Commodity.xml</string>
     <string name="content_authority">info.santhosh.evlo</string>
@@ -8,6 +9,8 @@
     <string name="rupee_symbol">\u20B9</string>
     <string name="modal_price">\u20B9 %1$s</string>
     <string name="market">%1$s market, %2$s district</string>
+    <string name="share_data">%1$s,\n%2$s variety,\n\u20B9 %3$s per 100kg,\n%4$s market, %5$s district,\n %6$s </string>
     <string name="favorite_content">Favorite</string>
     <string name="share_content">Share</string>
+    <string name="share_heading">Share the price detail...</string>
 </resources>
