--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,12 @@
     <string name="commodity_name_and_variety">%1$s, %2$s variety</string>
     <string name="favorite_content">Favorite</string>
     <string name="share_content">Share</string>
-    <string name="share_heading">Share the price detail...</string>
+    <string name="share_heading">Share the price detail</string>
     <string name="menu_bottom_commodities">Commodities</string>
     <string name="menu_bottom_markets">Markets</string>
     <string name="menu_bottom_favourites">Favourites</string>
     <string name="settings">Settings</string>
     <string name="search_commodities">Search Commodities</string>
     <string name="search_markets">Search Markets</string>
+    <string name="bookmarks">Bookmarks</string>
 </resources>
