--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="fav_added">Item added to bookmarks</string>
     <string name="fav_removed">Item removed from bookmarks</string>
     <string name="undo">Undo</string>
+    <string name="details_content">More</string>
 </resources>
