--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="fav_removed">Item removed from bookmarks</string>
     <string name="undo">Undo</string>
     <string name="details_content">More</string>
+    <string name="search_hint_detail">Search for commodities</string>
 </resources>
