--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Evlo</string>
-    <string name="title_commodity_detail">Commodity Detail</string>
     <string name="price_xml_url">https://data.gov.in/sites/default/files/Date-Wise-Prices-all-Commodity.xml</string>
     <string name="content_authority">info.santhosh.evlo</string>
     <string name="search_hint">Search Commodities</string>
@@ -37,4 +36,8 @@
     <string name="min_price_header">Minimum Price : </string>
     <string name="modal_price_header">Modal Price : </string>
     <string name="faq">FAQ</string>
+
+    <string name="intro_1_title">Welcome to Evlo</string>
+    <string name="intro_1_desc">"Find India's latest market prices instantly"</string>
+    <string name="intro_button">Get Started</string>
 </resources>
