--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="max_price_header">Maximum Price : </string>
     <string name="min_price_header">Minimum Price : </string>
     <string name="modal_price_header">Modal Price : </string>
-    <string name="faq">FAQ</string>
+    <string name="faq">FAQs</string>
     <string name="file_authority">info.santhosh.evlo.fileprovider</string>
     <string name="share_marketing">"Sent using Evlo app"</string>
 
@@ -50,4 +50,16 @@
     <string name="intro_button">Get Started</string>
     <string name="disclaimer">The contents of this service may be used free of charge in any format or media without requiring specific permission. Sanctity of the contents should be maintained. The source of contents must be acknowledged as http://agmarknet.nic.in when being reproduced / used as part of another service or publication. Violators of this advice shall be attracting legal action by the Directorate of Marketing and Inspection, Department of Agriculture and Co-operation, Government of India. “The arrival and prices of different agricultural commodities as received from the Agricultural Produce Market Committee (APMCs) of different States are uploaded at AGMARKNET portal for information only and shall not be considered as guidance, invitation or persuasion. Users/visitors have to make their own decisions based on their own independent enquiries, appraisals, judgments, wisdom and risks. The Govt. of India shall not be liable or responsible for any loss or cost or any action whatsoever arising out of use or relying on the arrivals and prices and other related information disseminated at the portal.</string>
     <string name="no_thanks">No thanks</string>
+    <string name="frequently_asked_questions">Frequently Asked Questions</string>
+    <string name="where_prices_title">Where do you get the data from?</string>
+    <string name="where_prices_description">Evlo gets its data from the Agmarknet portal (a government of India portal). The data is fetched from the Open Government Data (OGD) Platform - data.gov.in. Tap to see FAQs of the Agmarknet portal.</string>
+    <string name="where_prices_link">"http://agmarknet.gov.in/OtherPages/FAQ.aspx"</string>
+    <string name="why_markets_title">Why can\'t I find the market that I am looking for?</string>
+    <string name="why_markets_description">Not all markets in the country have participated in the Agmarknet project. So far 3245 markets across the country have been covered under the project as on 31 March 2015.</string>
+    <string name="why_units_title">Why is the price not appropriate for a certain commodity?</string>
+    <string name="why_units_description">The price reported from Agmarknet is always per Quintal (100 kg). If you find it inappropriate, please look into the commodity price in detail from Agmarknet portal. Please tap here to be redirected to the appropriate location in the Agmarknet portal where you can find the commodity price detail.</string>
+    <string name="why_units_link">"http://agmarknet.gov.in/PriceAndArrivals/arrivals1.aspx"</string>
+    <string name="where_historical_title">Is it possible to get historical prices?</string>
+    <string name="where_historical_description">Yes! Please tap to head over to the Agmarknet portal where historical prices can be viewed.</string>
+    <string name="where_historical_link">"http://agmarknet.nic.in/agnew/NationalBEnglish/DatewiseCommodityReport.aspx"</string>
 </resources>
