--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_refresh">Refresh data</string>
     <string name="rupee_symbol">\u20B9</string>
     <string name="rupee_price">\u20B9 %1$s</string>
-    <string name="rupee_price_with_unit">\u20B9 %1$s per 100kg*</string>
+    <string name="rupee_price_with_unit">\u20B9 %1$s per 100kg</string>
     <string name="market">%1$s market, %2$s district</string>
     <string name="market_only">%1$s market</string>
     <string name="district_only">%1$s district</string>
@@ -32,7 +32,7 @@
     <string name="no_search_results">No search results for \"%s\"</string>
     <string name="Connect_internet">Connect to the internet</string>
     <string name="loading">Data is being loaded</string>
-    <string name="unit_of_price">per 100kg*</string>
+    <string name="unit_of_price">per 100kg</string>
     <string name="arrival_header">Arrival Date : </string>
     <string name="max_price_header">Maximum Price : </string>
     <string name="min_price_header">Minimum Price : </string>
