--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,9 @@
     <string name="rate_positive">Yes, Rate it now</string>
     <string name="rate_negative">No, Send Feedback</string>
     <string name="rate_neutral">Dismiss</string>
-    <string name="bookmark_intro_helper">Tap on bookmark to pin the commodity information to the home screen.</string>
+    <string name="bookmark_intro_helper">Tap on Bookmark to pin the commodity information to the home screen.</string>
+    <string name="share_btn_intro_helper">Tap on Share button to share this commodity information with your friends.</string>
+    <string name="more_btn_intro_helper">Tap on More button to see the detailed prices of this commodity.</string>
     <plurals name="update_prices_notif_title">
         <item quantity="one">Price has been updated</item>
         <item quantity="other">Prices have been updated</item>
