--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="retry">Retry</string>
     <string name="price_updates_channel_title">Price Updates of Bookmarked Commodities</string>
     <string name="contact_us">Contact Us</string>
+    <string name="change_ad_settings">Modify Ad Settings</string>
     <string name="contact_us_subject">Contact regarding Evlo App</string>
     <string name="feedback_email">devforbillions@gmail.com</string>
     <string name="error_feedback_no_activity">Error - Couldn\'t find any apps that can email feedback to the Evlo app developer</string>
